# aic-layerwise

./: .gitignore  README.md
.claude/skills/layerwise-new-model/: SKILL.md
layerwise_tools/: README.md
layerwise_tools/common/: compare_mock_ep8_step_kernels.py  config_patch.py  parse_nsys_module.py  parse_nsys_step_sweep.py  parse_nsys_wall_vs_gpu.py
layerwise_tools/sglang/: README_DEEPSEEK_V4.md  layer_skip_patch.py  mock_ep_rank_moe_compute.py  moe_ep_local_experts_patch.py  moe_topk_hack_patch.py  profile_dsv4pro_tp8_mock_nsys.sh  run_bench_skip.py  run_dsv4pro_tp8_mock.sh  sglang_model_patches.py  sglang_step_marker.py  skip_prefill_patch.py
layerwise_tools/trtllm/: README.md
layerwise_tools/vllm/: run_vllm_bench.py  vllm_layer_skip_patch.py  vllm_step_marker.py
layerwise_tools/vllm_plugin/: pyproject.toml
layerwise_tools/vllm_plugin/layerwise_vllm/: __init__.py
